k8s/instances/overlays/rhlab/kafka/patches/console-ui.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: console-ui-route
spec:
  host: console-ui-route-netsentinel.apps.cluster-bbgs4.bbgs4.sandbox592.opentlc.com
